2012-06-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Enable use of rl de in destructive and.

2012-06-20 Leland Morrison <enigmalee AT sourceforge.net>

	* sim/ucsim/z80.src/inst_r2k.cc:
	  Fix flags for rl de, rr d, rr hl.

2012-06-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve destructive and.

2012-06-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Minor peephole fix.

2012-06-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  More efficient assignment for global variables.

2012-06-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug in & 0x8000 with ifx for unsigned int.

2012-06-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Refactor code for setup for built-in memcpy(),
	  use ex de, hl in register move,
	  use cp instead of xor for clearing the carry flag.

2012-06-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  src/hc08/ralloc.c:
	  Document relation between offsetFold() and packPointerOp().

2012-06-18 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx, device/include/pic14/pic14devices.txt,
	  device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/include/pic14/pic16f883.h,
	  device/non-free/include/pic14/pic16f884.h,
	  device/non-free/include/pic14/pic16f882.h,
	  device/non-free/lib/pic14/libdev/pic16f884.c,
	  device/non-free/lib/pic14/libdev/pic16f882.c,
	  device/non-free/lib/pic14/libdev/pic16f883.c:
	  applied patch #3531530 - new CPU support (pic16f882, 883, 884),
	  thanks to Molnar Karoly

2012-06-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Some more peepholes that help when framepointer is omitted.
	* src/z80/peep.c:
	  Handle cpl, ldir, di, ei, out, in, mul and bool in read analysis.

2012-06-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc: